added mapping '/' for menu items list

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,20 @@
     <description>
         The menu and online ordering system for Ricky's Restaurant
     </description>
-    
+
+    <servlet>
+        <servlet-name>home</servlet-name>
+        <servlet-class>com.virtualpairprogrammers.servlets.MenuItemsServlet</servlet-class>
+    </servlet>
     <servlet>
         <servlet-name> HelloWorldServlet</servlet-name>
         <servlet-class>com.virtualpairprogrammers.servlets.HelloWorldServlet</servlet-class>
     </servlet>
     
+    <servlet-mapping>
+        <servlet-name>home</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HelloWorldServlet</servlet-name>
         <url-pattern>/hello.html</url-pattern>
