--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,14 +17,22 @@
         <servlet-name> HelloWorldServlet</servlet-name>
         <servlet-class>com.virtualpairprogrammers.servlets.HelloWorldServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>searchItemServlet</servlet-name>
+        <servlet-class>com.virtualpairprogrammers.servlets.menuSearchServlet</servlet-class>
+    </servlet>
     
     <servlet-mapping>
         <servlet-name>home</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/listAll.html</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HelloWorldServlet</servlet-name>
         <url-pattern>/hello.html</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>searchItemServlet</servlet-name>
+        <url-pattern>/searchResults.html</url-pattern>
     </servlet-mapping>
 
 
