set 2 hours as timeout session

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -60,4 +60,7 @@
         <url-pattern>/ThanksYou.html</url-pattern>
     </servlet-mapping>
 
+    <session-config>
+        <session-timeout>120</session-timeout>
+    </session-config>
 </web-app> 
