--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<url>http://restaurant.empanada.com</url>
 
 	<properties>
-		<tomcat.version>[8.0.28, )</tomcat.version>
+		<tomcat.version>8.0.28</tomcat.version>
 	</properties>
 
 	<build>
@@ -89,6 +89,11 @@
 			<version>${tomcat.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.196</version>
+		</dependency>
 		<!-- Servlet api and dependencies -->
 
 
