--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,8 @@
 				<version>3.1</version>
 
 				<configuration>
-					<verbose>false</verbose>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
